force-app/main/default/objects/Building__c/Building__c.object-meta.xml
<CustomObject>
    <label>Building</label>
    <nameField>
        <label>Building Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Buildings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>