force-app/main/default/objects/Building__c/fields/BillingCompany__c.field-meta.xml
<CustomField>
    <fullName>BillingCompany__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Billing Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Buildings</relationshipLabel>
    <relationshipName>Buildings</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>